--- a/Squares/Squares/SquareGameViewController.xib
+++ b/Squares/Squares/SquareGameViewController.xib
@@ -1,56 +1,53 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SquareGameViewController">
             <connections>
-                <outlet property="GameBoard" destination="g0L-Wv-LR0" id="esn-Zu-kNg"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="GameBoard" destination="GeF-3k-1nI" id="1Ft-wS-IBx"/>
+                <outlet property="Score" destination="kO6-iR-RLU" id="AoH-kB-iKb"/>
+                <outlet property="view" destination="iN0-l3-epB" id="x6Y-2E-QjZ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
+        <view multipleTouchEnabled="YES" contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g0L-Wv-LR0" userLabel="GameBoard">
-                    <rect key="frame" x="0.0" y="68" width="320" height="500"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <view clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GeF-3k-1nI" userLabel="GameBoard">
+                    <rect key="frame" x="0.0" y="55" width="320" height="513"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                    <gestureRecognizers/>
-                    <connections>
-                        <outletCollection property="gestureRecognizers" destination="r0U-84-xgT" appends="YES" id="6e4-zY-PLe"/>
-                    </connections>
+                    <accessibility key="accessibilityConfiguration">
+                        <accessibilityTraits key="traits" none="YES" notEnabled="YES"/>
+                    </accessibility>
                 </view>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="obs-Mb-AaX" userLabel="Score">
-                    <rect key="frame" x="167" y="20" width="133" height="21"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kO6-iR-RLU" userLabel="Score">
+                    <rect key="frame" x="179" y="20" width="121" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="133" id="Hfp-EK-1Nu"/>
+                        <constraint firstAttribute="height" constant="21" id="Ehh-cx-DZt"/>
+                        <constraint firstAttribute="width" constant="121" id="tFl-Uf-MAz"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="g0L-Wv-LR0" secondAttribute="bottom" id="Cbx-ga-cHj"/>
-                <constraint firstAttribute="trailing" secondItem="g0L-Wv-LR0" secondAttribute="trailing" id="KwI-yc-4Ho"/>
-                <constraint firstItem="g0L-Wv-LR0" firstAttribute="top" secondItem="obs-Mb-AaX" secondAttribute="bottom" constant="27" id="Qa4-xT-Etg"/>
-                <constraint firstItem="obs-Mb-AaX" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" symbolic="YES" id="Qkx-uo-eHB"/>
-                <constraint firstAttribute="trailing" secondItem="obs-Mb-AaX" secondAttribute="trailing" constant="20" symbolic="YES" id="RJP-7I-xj4"/>
-                <constraint firstItem="g0L-Wv-LR0" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ilU-Qy-ppF"/>
+                <constraint firstAttribute="trailing" secondItem="kO6-iR-RLU" secondAttribute="trailing" constant="20" symbolic="YES" id="5EW-zn-f6T"/>
+                <constraint firstItem="GeF-3k-1nI" firstAttribute="top" secondItem="kO6-iR-RLU" secondAttribute="bottom" constant="14" id="96h-oI-1g5"/>
+                <constraint firstAttribute="bottom" secondItem="GeF-3k-1nI" secondAttribute="bottom" id="DTJ-bS-gYL"/>
+                <constraint firstItem="GeF-3k-1nI" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="L13-Fu-MvF"/>
+                <constraint firstItem="kO6-iR-RLU" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" symbolic="YES" id="h3t-LC-jbL"/>
+                <constraint firstAttribute="trailing" secondItem="GeF-3k-1nI" secondAttribute="trailing" id="uGJ-fl-Uab"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
-        <tapGestureRecognizer id="r0U-84-xgT">
-            <connections>
-                <action selector="tapAction:" destination="-1" id="qF0-rx-NKf"/>
-            </connections>
-        </tapGestureRecognizer>
     </objects>
 </document>
