--- a/Squares/Squares/SquareMenuViewController.xib
+++ b/Squares/Squares/SquareMenuViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -10,6 +10,10 @@
                 <outlet property="squareHardCoreButton" destination="qBN-N9-aGr" id="tv8-Ok-jwo"/>
                 <outlet property="squareMainModeButton" destination="3Wp-0h-2Dh" id="0rE-Xh-Xcu"/>
                 <outlet property="squareOptionsButton" destination="nDa-zY-k1o" id="2xf-vf-7fY"/>
+                <outlet property="squarePopZone" destination="ROT-hq-whQ" id="WPJ-qb-L8Z"/>
+                <outlet property="squarePopZone1" destination="wBR-qN-bzl" id="hvH-W3-oh4"/>
+                <outlet property="squarePopZone2" destination="XDg-cm-dDu" id="w11-tH-jm9"/>
+                <outlet property="squarePopZone3" destination="vAD-hN-Sgk" id="rQm-LE-dSy"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,8 +26,30 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
+                <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ROT-hq-whQ" userLabel="SquarePopZone">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <view userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wBR-qN-bzl" userLabel="Zone1">
+                            <rect key="frame" x="34" y="59" width="10" height="450"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        </view>
+                        <view userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XDg-cm-dDu" userLabel="Zone2">
+                            <rect key="frame" x="276" y="59" width="10" height="450"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        </view>
+                        <view userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vAD-hN-Sgk" userLabel="Zone3">
+                            <rect key="frame" x="52" y="215" width="216" height="11"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Wp-0h-2Dh" userLabel="Normal Game">
-                    <rect key="frame" x="80" y="304" width="160" height="50"/>
+                    <rect key="frame" x="58" y="244" width="200" height="80"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="TRAINING">
                         <color key="titleColor" red="0.45464439819880087" green="0.81129534213225651" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -34,7 +60,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qBN-N9-aGr" userLabel="HardCore">
-                    <rect key="frame" x="80" y="376" width="160" height="53"/>
+                    <rect key="frame" x="58" y="332" width="200" height="80"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="HARDCORE">
                         <color key="titleColor" red="0.89940649271011353" green="0.3093540449387242" blue="0.10348971726771863" alpha="1" colorSpace="calibratedRGB"/>
@@ -45,16 +71,20 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDa-zY-k1o" userLabel="Options">
-                    <rect key="frame" x="80" y="453" width="160" height="53"/>
+                    <rect key="frame" x="58" y="420" width="200" height="80"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <state key="normal" title="OPTIONS">
                         <color key="titleColor" red="0.89940649269999995" green="0.30935404490000001" blue="0.10348971730000001" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="launchOptions:" destination="-1" eventType="touchUpInside" id="X1E-j2-oGH"/>
+                    </connections>
                 </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LOGO Menu.png" translatesAutoresizingMaskIntoConstraints="NO" id="GIi-B8-mGs" userLabel="Logo">
-                    <rect key="frame" x="63" y="20" width="195" height="162"/>
+                <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LOGO Menu.png" translatesAutoresizingMaskIntoConstraints="NO" id="GIi-B8-mGs" userLabel="Logo">
+                    <rect key="frame" x="77" y="20" width="162" height="162"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
