--- a/Squares/Squares/SquareMenuViewController.xib
+++ b/Squares/Squares/SquareMenuViewController.xib
@@ -7,13 +7,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SquareMenuViewController">
             <connections>
+                <outlet property="squareCopyright" destination="FWf-tg-lfJ" id="5Jd-M5-UUK"/>
                 <outlet property="squareHardCoreButton" destination="qBN-N9-aGr" id="tv8-Ok-jwo"/>
                 <outlet property="squareMainModeButton" destination="3Wp-0h-2Dh" id="0rE-Xh-Xcu"/>
                 <outlet property="squareOptionsButton" destination="nDa-zY-k1o" id="2xf-vf-7fY"/>
                 <outlet property="squarePopZone" destination="ROT-hq-whQ" id="WPJ-qb-L8Z"/>
                 <outlet property="squarePopZone1" destination="wBR-qN-bzl" id="hvH-W3-oh4"/>
                 <outlet property="squarePopZone2" destination="XDg-cm-dDu" id="w11-tH-jm9"/>
-                <outlet property="squarePopZone3" destination="vAD-hN-Sgk" id="rQm-LE-dSy"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,35 +22,55 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Background.png" translatesAutoresizingMaskIntoConstraints="NO" id="894-3r-O9G">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background.png" translatesAutoresizingMaskIntoConstraints="NO" id="894-3r-O9G">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <view opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ROT-hq-whQ" userLabel="SquarePopZone">
+                <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ROT-hq-whQ" userLabel="SquarePopZone">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <view userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wBR-qN-bzl" userLabel="Zone1">
-                            <rect key="frame" x="34" y="59" width="10" height="450"/>
+                        <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wBR-qN-bzl" userLabel="Zone1">
+                            <rect key="frame" x="40" y="40" width="1" height="167"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
-                        <view userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XDg-cm-dDu" userLabel="Zone2">
-                            <rect key="frame" x="276" y="59" width="10" height="450"/>
+                        <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XDg-cm-dDu" userLabel="Zone2">
+                            <rect key="frame" x="280" y="40" width="1" height="167"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
-                        <view userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vAD-hN-Sgk" userLabel="Zone3">
-                            <rect key="frame" x="52" y="215" width="216" height="11"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SQUARES LOGO Test .png" translatesAutoresizingMaskIntoConstraints="NO" id="GIi-B8-mGs" userLabel="Logo">
+                            <rect key="frame" x="79" y="20" width="162" height="162"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        </view>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="162" id="fOw-oG-sSm"/>
+                                <constraint firstAttribute="width" constant="162" id="uQy-bZ-TQr"/>
+                            </constraints>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="GIi-B8-mGs" firstAttribute="top" secondItem="ROT-hq-whQ" secondAttribute="top" constant="20" id="9LW-SL-keL"/>
+                        <constraint firstItem="wBR-qN-bzl" firstAttribute="bottom" secondItem="XDg-cm-dDu" secondAttribute="bottom" id="CRu-Vl-Hvo"/>
+                        <constraint firstItem="wBR-qN-bzl" firstAttribute="top" secondItem="XDg-cm-dDu" secondAttribute="top" id="Dts-kM-hKf"/>
+                        <constraint firstItem="GIi-B8-mGs" firstAttribute="leading" secondItem="wBR-qN-bzl" secondAttribute="trailing" constant="38" id="SqZ-cz-msv"/>
+                        <constraint firstItem="GIi-B8-mGs" firstAttribute="centerX" secondItem="ROT-hq-whQ" secondAttribute="centerX" id="UgO-Hy-MK5"/>
+                        <constraint firstAttribute="trailing" secondItem="XDg-cm-dDu" secondAttribute="trailing" constant="39" id="aTm-Hz-qw9"/>
+                        <constraint firstItem="wBR-qN-bzl" firstAttribute="leading" secondItem="ROT-hq-whQ" secondAttribute="leading" constant="40" id="izm-D6-77g"/>
+                        <constraint firstAttribute="bottom" secondItem="wBR-qN-bzl" secondAttribute="bottom" constant="361" id="unB-B8-nhi"/>
+                        <constraint firstItem="wBR-qN-bzl" firstAttribute="top" secondItem="ROT-hq-whQ" secondAttribute="top" constant="40" id="v5Q-6Z-lUb"/>
+                        <constraint firstItem="XDg-cm-dDu" firstAttribute="leading" secondItem="GIi-B8-mGs" secondAttribute="trailing" constant="39" id="wl7-qh-mWv"/>
+                    </constraints>
                 </view>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Wp-0h-2Dh" userLabel="Normal Game">
-                    <rect key="frame" x="58" y="244" width="200" height="80"/>
+                <button opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Wp-0h-2Dh" userLabel="Normal Game">
+                    <rect key="frame" x="60" y="260" width="200" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="qfC-Ge-dHl"/>
+                        <constraint firstAttribute="height" constant="40" id="qhh-cj-gXh"/>
+                    </constraints>
                     <state key="normal" title="TRAINING">
                         <color key="titleColor" red="0.45464439819880087" green="0.81129534213225651" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -59,9 +79,13 @@
                         <action selector="launchGameView:" destination="-1" eventType="touchUpInside" id="1Sd-SE-WTc"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qBN-N9-aGr" userLabel="HardCore">
-                    <rect key="frame" x="58" y="332" width="200" height="80"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qBN-N9-aGr" userLabel="HardCore">
+                    <rect key="frame" x="60" y="320" width="200" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="QNN-4O-Ywa"/>
+                        <constraint firstAttribute="width" constant="200" id="USu-fs-jHm"/>
+                    </constraints>
                     <state key="normal" title="HARDCORE">
                         <color key="titleColor" red="0.89940649271011353" green="0.3093540449387242" blue="0.10348971726771863" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -70,9 +94,13 @@
                         <action selector="launchHardCoreGameView:" destination="-1" eventType="touchUpInside" id="qmr-yU-MGN"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDa-zY-k1o" userLabel="Options">
-                    <rect key="frame" x="58" y="420" width="200" height="80"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDa-zY-k1o" userLabel="Options">
+                    <rect key="frame" x="60" y="380" width="200" height="40"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="CFp-zm-V5s"/>
+                        <constraint firstAttribute="height" constant="40" id="GTV-0n-Ntl"/>
+                    </constraints>
                     <state key="normal" title="OPTIONS">
                         <color key="titleColor" red="0.89940649269999995" green="0.30935404490000001" blue="0.10348971730000001" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -81,19 +109,57 @@
                         <action selector="launchOptions:" destination="-1" eventType="touchUpInside" id="X1E-j2-oGH"/>
                     </connections>
                 </button>
-                <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="LOGO Menu.png" translatesAutoresizingMaskIntoConstraints="NO" id="GIi-B8-mGs" userLabel="Logo">
-                    <rect key="frame" x="77" y="20" width="162" height="162"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="facebook.png" translatesAutoresizingMaskIntoConstraints="NO" id="IKj-rG-dOP">
+                    <rect key="frame" x="268" y="522" width="32" height="32"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="32" id="8qa-l9-yDW"/>
+                        <constraint firstAttribute="height" constant="32" id="Ix3-wC-HQt"/>
+                    </constraints>
                 </imageView>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="© 2014 Forstulen" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FWf-tg-lfJ">
+                    <rect key="frame" x="20" y="527" width="162" height="21"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="162" id="Nnf-iO-ISP"/>
+                        <constraint firstAttribute="height" constant="21" id="l8v-CT-oj9"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+            <constraints>
+                <constraint firstItem="nDa-zY-k1o" firstAttribute="top" secondItem="qBN-N9-aGr" secondAttribute="bottom" constant="20" id="0fz-uL-bVb"/>
+                <constraint firstItem="qBN-N9-aGr" firstAttribute="top" secondItem="3Wp-0h-2Dh" secondAttribute="bottom" constant="20" id="1uq-wA-rBg"/>
+                <constraint firstItem="894-3r-O9G" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="3vG-Ot-JCl"/>
+                <constraint firstAttribute="bottom" secondItem="894-3r-O9G" secondAttribute="bottom" id="4hN-g2-DxF"/>
+                <constraint firstAttribute="trailing" secondItem="894-3r-O9G" secondAttribute="trailing" id="M7L-Fg-MUW"/>
+                <constraint firstAttribute="bottom" secondItem="IKj-rG-dOP" secondAttribute="bottom" constant="14" id="Po1-P2-E2L"/>
+                <constraint firstItem="ROT-hq-whQ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="RLo-t5-Zk9"/>
+                <constraint firstAttribute="trailing" secondItem="3Wp-0h-2Dh" secondAttribute="trailing" constant="60" id="Rlt-5V-L6I"/>
+                <constraint firstAttribute="bottom" secondItem="FWf-tg-lfJ" secondAttribute="bottom" constant="20" id="RrY-9v-tQE"/>
+                <constraint firstAttribute="trailing" secondItem="qBN-N9-aGr" secondAttribute="trailing" constant="60" id="THx-dq-Rke"/>
+                <constraint firstAttribute="trailing" secondItem="nDa-zY-k1o" secondAttribute="trailing" constant="60" id="WZk-09-s7k"/>
+                <constraint firstItem="894-3r-O9G" firstAttribute="width" secondItem="ROT-hq-whQ" secondAttribute="width" id="Zu8-oP-0i7"/>
+                <constraint firstAttribute="trailing" secondItem="IKj-rG-dOP" secondAttribute="trailing" constant="20" id="alj-Kl-7M0"/>
+                <constraint firstItem="nDa-zY-k1o" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="bFQ-3p-DoB"/>
+                <constraint firstItem="3Wp-0h-2Dh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="fLT-tR-VMZ"/>
+                <constraint firstItem="ROT-hq-whQ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="hxA-ju-BYp"/>
+                <constraint firstItem="894-3r-O9G" firstAttribute="height" secondItem="ROT-hq-whQ" secondAttribute="height" id="hxF-kQ-6Jx"/>
+                <constraint firstItem="FWf-tg-lfJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="iQ5-EN-Pex"/>
+                <constraint firstItem="FWf-tg-lfJ" firstAttribute="top" secondItem="nDa-zY-k1o" secondAttribute="bottom" constant="107" id="kIC-vh-ZtG"/>
+                <constraint firstItem="894-3r-O9G" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="m31-qf-uMr"/>
+                <constraint firstItem="qBN-N9-aGr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="60" id="sO3-5K-WBQ"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
     <resources>
         <image name="Background.png" width="640" height="960"/>
-        <image name="LOGO Menu.png" width="128" height="128"/>
+        <image name="SQUARES LOGO Test .png" width="128" height="128"/>
+        <image name="facebook.png" width="31" height="31"/>
     </resources>
 </document>
